 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174:  Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-3248: Upgrade hadoop-2.0.0-alpha to hadoop-2.0.3-alpha (daijy)

PIG-3235: Add log4j.properties for unit tests (cheolsoo)

PIG-3236: parametrize snapshot and staging repo id (gkesavan via daijy)

PIG-3244: Make PIG_HOME configurable (robert.schooley@gmail.com via daijy)

PIG-3233: Deploy a Piggybank Jar (njw45 via cheolsoo)

PIG-3245: Documentation about HBaseStorage (Daisuke Kobayashi via cheolsoo)

PIG-3211: Allow default Load/Store funcs to be configurable (prkommireddi via cheolsoo)

PIG-3136: Introduce a syntax making declared aliases optional (jcoveney via cheolsoo)

PIG-3142: [piggybank] Fixed-width load and store functions for the Piggybank (jpacker via cheolsoo)

PIG-3162: PigTest.assertOutput doesn't allow non-default delimiter (dreambird via cheolsoo)

PIG-3002: Pig client should handle CountersExceededException (jarcec via billgraham)

PIG-3189: Remove ivy/pig.pom and improve build mvn targets (billgraham)

PIG-3192: Better call to action to download Pig in docs (rjurney via jcoveney)

PIG-3167: Job stats are printed incorrectly for map-only jobs (Mark Wagner via jcoveney)

PIG-3131: Document PluckTuple UDF (rjurney via jcoveney) 

PIG-3098: Add another test for the self join case (jcoveney)

PIG-3129: Document syntax to refer to previous relation (rjurney via jcoveney)

PIG-2553: Pig shouldn't allow attempts to write multiple relations into same directory (prkommireddi via cheolsoo)

PIG-3179: Task Information Header only prints out the first split for each task (knoguchi via rohini)

PIG-3108: HBaseStorage returns empty maps when mixing wildcard with other columns (christoph.bauer via billgraham)
