@@ -44,6 +44,8 @@ import org.apache.pig.impl.logicalLayer.schema.Schema;
 import org.apache.pig.impl.util.ObjectSerializer;
 import org.apache.pig.impl.util.Utils;
 import org.apache.pig.scripting.ScriptEngine;
+import org.apache.pig.scripting.groovy.GroovyAlgebraicEvalFunc.BigDecimalGroovyAlgebraicEvalFunc;
+import org.apache.pig.scripting.groovy.GroovyAlgebraicEvalFunc.BigIntegerGroovyAlgebraicEvalFunc;
 import org.apache.pig.scripting.groovy.GroovyAlgebraicEvalFunc.BooleanGroovyAlgebraicEvalFunc;
 import org.apache.pig.scripting.groovy.GroovyAlgebraicEvalFunc.ChararrayGroovyAlgebraicEvalFunc;
 import org.apache.pig.scripting.groovy.GroovyAlgebraicEvalFunc.DataBagGroovyAlgebraicEvalFunc;
@@ -371,6 +373,10 @@ public class GroovyScriptEngine extends ScriptEngine {
           className = LongGroovyAlgebraicEvalFunc.class.getName();
         } else if (returnType.equals(Map.class)) {
           className = MapGroovyAlgebraicEvalFunc.class.getName();
+        } else if (returnType.equals(BigDecimal.class)) {
+          className = BigDecimalGroovyAlgebraicEvalFunc.class.getName();
+        } else if (returnType.equals(BigInteger.class)) {
+          className = BigIntegerGroovyAlgebraicEvalFunc.class.getName();
         } else {
           throw new RuntimeException(path + ": Unknown return type for Algebraic UDF '" + algebraic + "'");
         }
